<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.daniel_catlett.ratethatrecorddc.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtTitle"
            android:textSize="30sp"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:text="@string/txtEverchanging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtFirstSong"
            android:textSize="18sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgBtnFirstSong"
            android:layout_marginTop="8dp"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintLeft_creator="1" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/everchangingartwork"
            android:id="@+id/imgBtnFirstSong"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle"
            android:layout_marginTop="16dp"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintLeft_creator="1" />

        <ImageButton
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/orbitartwork"
            android:id="@+id/imgBtnSecondSong"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtFirstSong"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintLeft_creator="1"
            android:layout_marginTop="8dp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/clocktownartwork"
            android:id="@+id/imgBtnThirdSong"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSecondSong"
            android:layout_marginTop="8dp"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintLeft_creator="1" />

        <TextView
            android:text="@string/txtOrbit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtSecondSong"
            android:textSize="18sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgBtnSecondSong"
            android:layout_marginTop="8dp" />

        <TextView
            android:text="@string/txtClocktown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtThirdSong"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/imgBtnThirdSong"
            android:layout_marginTop="8dp"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintLeft_creator="1" />

        <TextView
            android:text="@string/txtHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/txtThirdSong"
            android:layout_marginTop="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="12sp"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintLeft_creator="1" />

        <Button
            android:text="@string/txtMoveBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnB2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/imgBtnSecondSong"
            tools:layout_constraintBottom_creator="1"
            app:layout_constraintBottom_toBottomOf="@+id/imgBtnSecondSong"
            android:layout_marginBottom="24dp"
            app:layout_constraintHorizontal_bias="0.43"
            android:textSize="12sp"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintLeft_creator="1" />

        <Button
            android:text="@string/txtMoveMid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnC2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/imgBtnThirdSong"
            tools:layout_constraintTop_creator="1"
            android:layout_marginTop="19dp"
            app:layout_constraintTop_toTopOf="@+id/imgBtnThirdSong"
            android:textSize="12sp" />

        <Button
            android:text="@string/txtMoveTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnC1"
            app:layout_constraintRight_toLeftOf="@+id/imgBtnThirdSong"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:layout_constraintTop_creator="1"
            android:layout_marginTop="19dp"
            app:layout_constraintTop_toTopOf="@+id/imgBtnThirdSong" />

        <Button
            android:text="@string/txtMoveTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnB1"
            app:layout_constraintRight_toLeftOf="@+id/imgBtnSecondSong"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:layout_constraintBottom_creator="1"
            app:layout_constraintBottom_toBottomOf="@+id/imgBtnSecondSong"
            android:layout_marginBottom="24dp"
            app:layout_constraintHorizontal_bias="1.0" />

        <Button
            android:text="@string/txtMoveMid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnA1"
            app:layout_constraintRight_toLeftOf="@+id/imgBtnFirstSong"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:layout_constraintTop_creator="1"
            android:layout_marginTop="23dp"
            app:layout_constraintTop_toTopOf="@+id/imgBtnFirstSong"
            android:textSize="12sp" />

        <Button
            android:text="@string/txtMoveBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnA2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/imgBtnFirstSong"
            tools:layout_constraintTop_creator="1"
            android:layout_marginTop="23dp"
            app:layout_constraintTop_toTopOf="@+id/imgBtnFirstSong"
            android:textSize="12sp" />

    </android.support.constraint.ConstraintLayout>
</RelativeLayout>
